tests/toast-results/Ver_2_Tests-2023-06-22T02:13:40.911Z/jt18/jlog.txt
--app=Ver_2_Tests --port=1884 --group=2 --data=127.0.0.1:6379 --edge=1 --long=128.3381 --lat=6.2422 --localregistryhost=0 --device
------
Current Device Node Id: c8358bea-5e74-45e7-84fe-744fd41579e0
Starting App..
{ cmd: 6700, opt: 6701, data: { lifetime: 3000, k: 3 } }
Killing broker with PID:

STDERR: node:internal/event_target:1037
  process.nextTick(() => { throw err; });
                           ^

TypeError: this.ncache.getNumofFogs is not a function
    at JAMCore.hoistFog (/Users/ethanbreit/work/JAMScript/lib/jside/core/jamcore.js:370:29)
    at JAMCore.processWorkerMsg (/Users/ethanbreit/work/JAMScript/lib/jside/core/jamcore.js:167:22)
    at MessagePort.<anonymous> (/Users/ethanbreit/work/JAMScript/lib/jside/core/jamcore.js:100:22)
    at [nodejs.internal.kHybridDispatch] (node:internal/event_target:762:20)
    at exports.emitMessage (node:internal/per_context/messageport:23:28)

Node.js v20.2.0
kill: usage: kill [-s sigspec | -n signum | -sigspec] pid | jobspec ... or kill -l [sigspec]



Test: jt18 Completed Succesfully
Time to Compile: 1.523s
Time to Run Test: 11.207s
